# erdos

./: .gitignore  Erdos.lean  README.md  lake-manifest.json  lakefile.toml  pyproject.toml  requirements.txt
problems/: example_problem.md  triangle_tiling.md
problems/hints/: erdos_85_hint.md
problems/lean/: erdos_85.lean
problems/markdown/: squarefree_gaps.md
solutions/example_problem/: SumFirstN.lean
solutions/triangle_tiling/: TriangleTiling.lean
src/erdos/: AristotleClient.py  Config.py  LLMJudge.py  LeanVerifier.py  Pipeline.py  ProblemLoader.py  __init__.py  __main__.py  cli.py
